tests/specs/ecosystem/radix_ui_fork/react_popper/0_0_6.test
radix-ui-fork/react-popper/0.0.6
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@radix-ui-fork/react-arrow@0.0.6": "jsr:@radix-ui-fork/react-arrow@0.0.6",
      "jsr:@radix-ui-fork/react-compose-refs@0.0.6": "jsr:@radix-ui-fork/react-compose-refs@0.0.6",
      "jsr:@radix-ui-fork/react-context@0.0.6": "jsr:@radix-ui-fork/react-context@0.0.6",
      "jsr:@radix-ui-fork/react-primitive@0.0.6": "jsr:@radix-ui-fork/react-primitive@0.0.6",
      "jsr:@radix-ui-fork/react-slot@0.0.6": "jsr:@radix-ui-fork/react-slot@0.0.6",
      "jsr:@radix-ui-fork/rect@0.0.6": "jsr:@radix-ui-fork/rect@0.0.6",
      "npm:@types/react@^18.2.0": "npm:@types/react@18.3.1",
      "npm:react-dom@^18.0.0": "npm:react-dom@18.3.1_react@18.3.1",
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "jsr": {
      "@radix-ui-fork/react-arrow@0.0.6": {
        "integrity": "6c55a0e1856a438917d7f6d10052391dc3391dadcfe8158e49d7204371a74ef5",
        "dependencies": [
          "jsr:@radix-ui-fork/react-primitive@0.0.6",
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/react-compose-refs@0.0.6": {
        "integrity": "2bd4b7d20ac63441b4878d2e09cdf3f5a564e4b19fa6594cfd3690e8947e877b",
        "dependencies": [
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/react-context@0.0.6": {
        "integrity": "01eed2e685fcb95c59eaed28d0600e797b9f99aea8e7d00c40e7f0179c7f537d",
        "dependencies": [
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/react-primitive@0.0.6": {
        "integrity": "99dddc2a93cd4642b249820f0b2f8d55d2a5f20307f0df01b65f26ee5f109d08",
        "dependencies": [
          "jsr:@radix-ui-fork/react-slot@0.0.6",
          "npm:@types/react@^18.2.0",
          "npm:react-dom@^18.0.0"
        ]
      },
      "@radix-ui-fork/react-slot@0.0.6": {
        "integrity": "96bf65dbe6fcd1f7baf8147e1cee83ed1ff2c59242349ca2ea76074305b54deb",
        "dependencies": [
          "jsr:@radix-ui-fork/react-compose-refs@0.0.6",
          "npm:@types/react@^18.2.0"
        ]
      },
      "@radix-ui-fork/rect@0.0.6": {
        "integrity": "f1f4bac00de78dc229a1f40b6c476d5280c446a302a7fc2d2dc04ca5970e4392"
      }
    },
    "npm": {
      "@types/prop-types@15.7.12": {
        "integrity": "sha512-5zvhXYtRNRluoE/jAp4GVsSduVUzNWKkOZrCDBWYtE7biZywwdC2AcEzg+cSMLFRfVgeAFqpfNabiPjxFddV1Q==",
        "dependencies": {}
      },
      "@types/react@18.3.1": {
        "integrity": "sha512-V0kuGBX3+prX+DQ/7r2qsv1NsdfnCLnTgnRJ1pYnxykBhGMz+qj+box5lq7XsO5mtZsBqpjwwTu/7wszPfMBcw==",
        "dependencies": {
          "@types/prop-types": "@types/prop-types@15.7.12",
          "csstype": "csstype@3.1.3"
        }
      },
      "csstype@3.1.3": {
        "integrity": "sha512-M1uQkMl8rQK/szD0LNhtqxIPLpimGm8sOBwU7lLnCpSbTyY3yeU1Vc7l4KT5zT4s/yOxHH5O7tIuuLOCnLADRw==",
        "dependencies": {}
      },
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react-dom@18.3.1_react@18.3.1": {
        "integrity": "sha512-5m4nQKp+rZRb09LNH59GM4BxTh9251/ylbKIbpe7TpGxfJ+9kv6BLkLBXIjjspbgbnIBNqlI23tRnTWT0snUIw==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0",
          "react": "react@18.3.1",
          "scheduler": "scheduler@0.23.2"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      },
      "scheduler@0.23.2": {
        "integrity": "sha512-UOShsPwz7NrMUqhR6t0hWjFduvOzbtv7toDH1/hIrfRNIDBnnBWd0CwJTGvTpngVlmwGCdP9/Zl/tVrDqcuYzQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Element'.
type Boundary = Element | null;
                ~~~~~~~
    at file://<tmpdir>/src/Popper.tsx:32:17

error: Type checking failed.

